tests/error/string_literal.lua
s1 = 'abc'
s2 = 'foo'
s3 = 'abc\
      foo\z \t





      bar'
